[package]
name = "parenthesis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[build-dependencies]
embed-resource = "1.7"

[dependencies]
winit = "0.26.0"
imgui = { version = "^0.8", features = ["tables-api"] }
imgui-winit-support = { version = "^0.8", default-features = false, features = ["winit-26"] }
imgui-rs-vulkan-renderer = "1.4.0"
simple_logger = "2.1"
log = "0.4"
ash = { version = "0.37", default-features = false, features = ["debug", "linked"] }
ash-window = "0.11"
image = "0.24"
rfd = "0.10.0"
chrono = "0.4"